--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
       <h1>My ToDo List</h1>
     </header>
     <main>
-      <div ng-controller="PeopleCtrl as peopleListController">
-        <div ng-repeat="person in peopleListController.people">
+      <div ng-controller="PeopleCtrl as peopleCtrl">
+        <div ng-repeat="person in peopleCtrl.people track by $index">
           <h2>{{person.name}}</h2>
-          <ul ng-controller="TodoListCtrl as todoListController">
-            <li ng-repeat="todo in todoListController.todos">
+          <ul ng-controller="TodoListCtrl as todoCtrl">
+            <li ng-repeat="todo in todoCtrl.todos">
               <input type="checkbox" ng-model="todo.completed"> <span ng-class="{ completed: todo.completed }">{{todo.text}}</span>
             </li>
-            <li><input type="text" ng-model="todoListController.todoToAdd"><a href="" ng-click="todoListController.addTodo(todoListController.todoToAdd)">add</a></li>
+            <li><input type="text" ng-model="todoCtrl.todoToAdd"><a href="" ng-click="todoCtrl.addTodo(person)">add</a></li>
           </ul>
         </div>
         <div>
-          <input type="text" ng-model="peopleListController.nameToAdd"><a href="" ng-click="peopleListController.addPerson(peopleListController.nameToAdd)">add person</a>
+          <input type="text" ng-model="peopleCtrl.nameToAdd"><a href="" ng-click="peopleCtrl.addPerson()">add person</a>
         </div>
       </div>
     </main>
